--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -6229,7 +6229,10 @@ a.list-blog.blog-list:hover {
   height: 250px;
 
   margin-bottom: 30px;
-  border: 2px solid #013569;
+  /* border: 1px solid #013569; */
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .team-section .single-team-wrap .team-thumb {
@@ -6239,12 +6242,14 @@ a.list-blog.blog-list:hover {
 .team-section .single-team-wrap .team-thumb img {
   height: 250px;
   object-fit: cover;
+  border-radius: 11px;
 }
 
 .team-section .single-team-wrap .team-details {
   background: #fff;
 
   padding: 40px 12px 0 25px;
+  border-radius: 10px;
 }
 section#client
   .faq-section.faq-two.section-padding.pt-0
@@ -9543,6 +9548,9 @@ section#resource .process-section.section-padding.pt-0 .container {
 section#contact {
   /* background:#ff9e4a ; */
 }
+div#accordionFaq {
+  padding-top: 80px;
+}
 .accordion.faqs .card {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Smooth transition */
   border-radius: 20px;
@@ -9719,10 +9727,16 @@ section#resource .section-title p {
   border: none;
   width: 100%;
 }
-.row.row-reverse{
-  display:flex;
+.row.row-reverse {
+  display: flex;
   flex-direction: row-reverse;
 }
+
+.team-section .single-team-wrap:hover {
+  box-shadow: 0 4px 20px 5px rgba(255, 158, 74, 0.8),
+    0 4px 20px 5px rgba(143, 210, 215, 0.8);
+}
+
 @media (max-width: 991px) {
   .navbar-toggler {
     border: none;
@@ -9865,10 +9879,12 @@ section#resource .section-title p {
   }
 }
 
-@media(max-width:991px){
-  .faq-section.faq-two.section-padding.pt-0 .section-title.text-center a.main-btn.mt-3 {
+@media (max-width: 991px) {
+  .faq-section.faq-two.section-padding.pt-0
+    .section-title.text-center
+    a.main-btn.mt-3 {
     margin-bottom: 0px !important;
-}
+  }
 }
 .blog-feature-img {
   display: none;
@@ -9879,7 +9895,7 @@ section#resource .section-title p {
 .col-xl-6.col-lg-6.col-12.text-end.wow.fadeInUp.aos-init.aos-animate h6 {
   margin-right: 40px;
 }
-.blog-quote-wrap h6.blog-author:before{
-  width:40px;
+.blog-quote-wrap h6.blog-author:before {
+  width: 40px;
   left: 20px;
 }
