--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1241,7 +1241,7 @@ iframe {
 
     width: 100%;
 
-    background-color: #8fd2d7 !important;
+    background-color: #013569 !important;
 
     z-index: 999;
 
