--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1241,7 +1241,7 @@ iframe {
 
     width: 100%;
 
-    background-color: #8fd2d7 !important;
+    background-color: #013569 !important;
 
     z-index: 999;
 
@@ -9991,6 +9991,7 @@ section#resource .section-title p {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   height: 100%;
+  background: #fff;
 }
 .pdf-column a{
   padding-top: 20px;
@@ -10043,3 +10044,87 @@ h5.mb-0.subtitle.last-tab a {
 .testimonial-section.section-padding .section-title h2{
 text-align: center;
 }
+
+/* ********************************************** */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+a.read-more{
+  color: #013569;
+  font-weight: 700;
+}
+
+/* The video background */
+.video-background {
+  position: relative;
+  /* height: 100vh; */
+  width: 100%;
+  overflow: hidden; 
+}
+
+#myVideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  z-index: -1; /* Ensure the video stays in the background */
+}
+
+/* Overlay to improve visibility */
+.video-background::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Dark overlay with transparency */
+  z-index: 1; /* Ensure the overlay is on top of the video */
+}
+
+/* Content box styling */
+.content-box {
+  position: relative;
+  z-index: 2; /* Ensure the content box is above the video and overlay */
+  text-align: center;
+ 
+  
+}
+
+
+
+
+
