--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -5879,6 +5879,33 @@ a.list-blog.blog-list:hover {
   height: auto;
 }
 
+.about-content-wrap.pl-60 .section-title h6 a:hover{
+    background: #003468;
+    color: #fff;
+}
+a.list-blog.blog-list:hover{
+    background: #003468;
+    color: #fff;
+}
+.details-link:hover{
+    border: none;
+}
+.pdf-column a{
+    text-decoration: none;
+    background: #003468;
+    color: #fff;
+    padding: 15px 20px;
+    border-radius: 25px;
+    font-size: 20px;
+    border: 2px solid #003468 !important;
+    transition: background 0.3s ease;
+}
+.pdf-column a:hover{
+    background: #fff;
+    color: #003468;
+}
+
+
 @-webkit-keyframes shake {
   0% {
     -webkit-transform: rotate(7deg);
